# AGENT_CREWAI

./: pyproject.toml  report.md
src/agent/: crew.py  main.py
