[project]
name = "agent"
version = "0.1.0"
description = "agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.12"
dependencies = [
    "crewai[tools]==1.14.5a2"
]

[project.scripts]
agent = "agent.main:run"
run_crew = "agent.main:run"
train = "agent.main:train"
replay = "agent.main:replay"
test = "agent.main:test"
run_with_trigger = "agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
